k8s/djang-https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress-ssl
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: "tsadimas-django.ddns.net"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: django-clip
            port:
              number: 8000
  tls:
    - hosts:
      - tsadimas-django.ddns.net
      secretName: fastapi-production-certificate
